--- a/net.css
+++ b/net.css
@@ -1,429 +1,529 @@
-/* Global Styles */
-:root {
-	--primary-color: #e50914;
-	--dark-color: #141414;
-	--light-color: #f4f4f4;
+:root{
+    --primary-color: #e50914;
+    --dark-color: #141414;
+    --light-color: #f4f4f4;
 }
 
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-body {
-	font-family: 'Arial', sans-serif;
+body{
+    font-family: 'Arial', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	background: #000;
 	color: #999;
 }
 
-ul {
-	list-style: none;
+ul{
+    list-style: none;
 }
 
-h1,
-h2,
-h3,
-h4 {
-	color: #fff;
+h1,h2,h3,h4{
+    color: #ffffff;
 }
 
-a {
-	color: #fff;
-	text-decoration: none;
+h3{
+    font-weight: lighter;
 }
 
-p {
-	margin: 0.5rem 0;
+a{
+    color: #ffffff;
+    text-decoration: none;
 }
 
-img {
-	width: 100%;
+p{
+    margin: 0.5rem 0;
+    font-weight: bold;
+    color: #ffffff;
 }
 
-.showcase {
-	width: 100%;
-	height: 93vh;
-	position: relative;
-	background: url('https://i.ibb.co/vXqDmnh/background.jpg') no-repeat center center/cover;
+img{
+    width: 100%;
 }
 
-.showcase::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	background: rgba(0, 0, 0, 0.6);
-	box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+.showcase{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background: url("https://i.ibb.co/vXqDmnh/background.jpg") no-repeat center center/cover;
 }
 
-.showcase-top {
-	position: relative;
-	z-index: 2;
-	height: 90px;
+.showcase::after{
+   
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: rgba(0, 0, 0, 0.6);
+        box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+    
+}   
+
+.showcase-top{
+    position: relative;
+    z-index: 2;
+    height: 90px;
+}
+
+.showcase-top img{
+    width: 140px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(40% , -50%);
+}
+
+.showcase-top a{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-60% , -50%);
+}
+
+.showcase-content{
+    position: relative;
+    margin: 0 26%;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 9rem;
+}
+
+.showcase-content h1{
+    font-weight: 700;
+    font-size: 64px;
+    margin: 0 30px;
+    max-width: 800px;
+    line-height: 74.5px;
+}
+
+.showcase-content h3{
+    color: white;
+    font-size: 25px;
+    margin: 16px 0;
+}
+
+.showcase-content p{
+    font-size: 19.2px;
+    font-weight: 300;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+}
+
+.showcase-content input{
+    position: absolute;
+    left: 0;
+    bottom: -8vh;
+    width: 454px;
+    height: 3rem;
+    font-size: 1rem;
+    padding-left: 0.5rem;
+}
+
+.btn{
+    display: inline-block;
+    background: var(--primary-color);
+    color: white;
+    padding: 0.5rem 1.2rem;
+    font-size: 1rem;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-right: 0.5rem;
+    outline: none;
+    box-shadow: 0 5px 3px rgba(0, 0, 0, 0.45);
+}
+
+.btn:hover{
+    opacity: 0.9;
+}
+
+.btn-rounded{
+    border-radius: 5px;
+}
+
+.showcase-content .btn-lg{
+    position: absolute;
+    right: 0;
+    bottom: -8vh;
+    padding: 0.5rem 1.2rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    height: 36px;
+    width: 14rem;
+}
+
+.card-0 , 
+.card-1,
+.card-2,
+.card-3{
+    border-top: 8px rgb(69, 69, 69) solid;
+    padding: 50px;
+}
+
+.card-0{
+    position: relative;
+    display: inline-grid;
+    grid-template-columns: 40% 50%;
+    text-align: left;
+    align-items: center;
+    padding: 25px 45px 50px;
+}
+
+.desc-0{
+    padding-left: 100px;
+}
+
+.card-1{
+    position: relative;
+    display: inline-grid;
+    grid-template-columns: 50% 40%;
+    text-align: left;
+    align-items: center;
+    padding: 25px 45px 50px;
+}
+
+.desc-1{
+    padding-left: 80px;
+}
+
+.style-cards h1{
+    font-size: 3rem;
+    padding: 1rem;
+    padding-left: 0;
+}
+
+.style-cards h3{
+    font-size: 1.6rem;
+    line-height: 2rem;
+}
+
+.card-1 video{
+    position: relative;
+    width: 100%;
+    height: 54%;
+    grid-column: 2/2;
+    grid-row: 1/2;
+    z-index: -1;
+}
+
+.card-1 img{
+    grid-column: 2/2;
+    grid-row: 1/2;
+}
+
+.card-2{
+    position: relative;
+    display: inline-grid;
+    grid-template-columns: 40% 50%;
+    text-align: left;
+    align-items: center;
+    padding: 25px 45px 50px;
+}
+
+.desc-2{
+    padding-left: 100px;
+}
+
+.card-3{
+    position: relative;
+    display: inline-grid;
+    grid-template-columns: 50% 40%;
+    text-align: left;
+    align-items: center;
+    padding: 25px 45px 50px;
+}
+
+.desc-3{
+    padding-left: 80px;
+    padding-right: 20px;
+}
+
+.card-3 img{
+    width: 110%;
+    grid-column: 2/2;
+    grid-row: 1/2;
+}
+
+.card-3 video{
+    position: relative;
+    top: -87px;
+    left: 125px;
+    width: 65%;
+    height: 78%;
+    grid-column: 2/2;
+    grid-row: 1/2;
+    z-index: -1;
+}
+
+.faq{
+    text-align: center;
+}
+
+.faq h1{
+    padding-bottom: 40px;
+    font-size: 3rem;
+}
+
+.questions{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 40%;
+    align-items: center;
+}
+
+.questions li{
+    padding: 20px 30px;
+    margin: 5px;
+    font-size: 1.6rem;
+    background-color: #303030;
+    color: white;
+    text-align: left;
+    width: 50%;
+}
+
+.faq p{
+    padding-top: 60px;
+    font-size: 1.2rem;
+    font-weight: 200;
+}
+
+.input{
+    display: inline-grid;
+    align-items: center;
+    grid-template-columns: 50% 40%;
+}
+
+.input input{
+    width: 600px;
+    height: 3rem;
+}
+
+.input button{
+    height: 3.25rem;
+    width: 320px;
+    left: 20px;
+    text-align: center;
+    background-color: var(--primary-color);
+    font-size: 1.5rem;
+    padding: 15px 32px;
+    border: none;
+    border-radius: 2px;
+    color: white;
+}
+
+.footer{
+    max-width: 70%;
+    margin: 1rem auto;
+    overflow: auto;
+}
+
+.footer ,
+.footer a{
+    color: #999999;
+    font-size: 0.9rem;
+}
+
+.footer p{
+    margin-bottom: 1.5rem;
+}
+
+.footer .footer-cols{
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+    grid-gap: 2rem;
+}
+
+.footer li{
+    line-height: 2.4;
+}
+
+@media (max-width: 960px) {
+
+	.showcase {
+	height: 70vh;
+}
+
+.hide-sm {
+	display: none;
 }
 
 .showcase-top img {
-	width: 170px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin-left: 0;
-}
-
-.showcase-top a {
-	position: absolute;
-	top: 50%;
-	right: 0;
-	transform: translate(-50%, -50%);
-}
-
-.showcase-content {
-	position: relative;
-	z-index: 2;
-	width: 65%;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	margin-top: 9rem;
+	top: 30%;
+	left: 5%;
+	transform: translate(0);
 }
 
 .showcase-content h1 {
-	font-weight: 700;
-	font-size: 5.2rem;
-	line-height: 1.1;
-	margin: 0 0 2rem;
+	font-size: 2.7rem;
+	line-height: 1;
 }
-
+.desc-0 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-0 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-1 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-1 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-2 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-2 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-3 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-3 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.faq h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.faq li {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.showcase-content h3 {
+	font-size: 2.2rem;
+	line-height: 1;
+}
 .showcase-content p {
+	font-size: 1.1rem;
+}
+
+.footer .footer-cols {
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.input {
+	font-size: 1.1rem;
+	padding: 1.4rem 2rem;
 	text-transform: uppercase;
-	color: #fff;
-	font-weight: 400;
-	font-size: 1.9rem;
-	line-height: 1.25;
-	margin: 0 0 2rem;
 }
 
-/* Tabs */
-.tabs {
-	background: var(--dark-color);
-	padding-top: 1rem;
-	border-bottom: 3px solid #3d3d3d;
-	border-right: none;
+.text-xl {
+	font-size: 1.5rem;
 }
 
-.tabs .container {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 1rem;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
+.text-lg {
+	font-size: 1.3rem;
+	margin-bottom: 1rem;
 }
 
-.tabs p {
+.text-md {
+	margin-bottom: 1rem;
 	font-size: 1.2rem;
-	padding-top: 0.5rem;
+}
 }
 
-.tabs .container > div {
-	padding: 1.5rem 0;
+@media (max-width: 700px) {
+.showcase::after {
+	background: rgba(0, 0, 0, 0.6);
+	box-shadow: inset 80px 80px 150px #000000, inset -80px -80px 150px #000000;
 }
-
-.tabs .container > div:hover {
-	color: #fff;
-	cursor: pointer;
+.faq h1 {
+	font-size: 0.7rem;
+	line-height: 1;
 }
-
-.tab-border {
-	border-bottom: var(--primary-color) 4px solid;
+.faq li {
+	font-size: 0.7rem;
+	line-height: 1;
 }
-
-/* Tab Content */
-.tab-content {
-	padding: 3rem 0;
-	background: #000;
-	color: #fff;
+.desc-0 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
 }
-
-/* Hide initial content */
-#tab-1-content,
-#tab-2-content,
-#tab-3-content {
-	display: none;
-	opacity: 0;
+.desc-0 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
 }
-
-.show {
-	display: block !important;
-	opacity: 1 !important;
-	transition: all 1000 ease-in;
+.desc-1 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-1 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-2 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-2 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-3 h1 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.desc-3 h3 {
+	font-size: 0.7rem;
+	line-height: 1;
+}
+.showcase-content h1 {
+	font-size: 1.5rem;
+	line-height: 1;
+}
+.showcase-content h3 {
+	font-size: 1.1rem;
+	line-height: 1;
+}
+.showcase-content p {
+	font-size: 0.8rem;
 }
 
 #tab-1-content .tab-1-content-inner {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 2rem;
-	align-items: center;
-	justify-content: center;
+	grid-template-columns: 1fr;
+	text-align: center;
 }
 
 #tab-2-content .tab-2-content-top {
-	display: grid;
-	grid-template-columns: 2fr 1fr;
-	grid-gap: 1rem;
-	justify-content: center;
-	align-items: center;
+	display: block;
+	text-align: center;
 }
 
 #tab-2-content .tab-2-content-bottom {
 	margin-top: 2rem;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: 1fr;
 	grid-gap: 2rem;
 	text-align: center;
 }
 
-.table {
-	width: 100%;
-	margin-top: 2rem;
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-.table thead th {
-	text-transform: uppercase;
-	padding: 0.8rem;
-}
-
-.table tbody {
-	display: table-row-group;
-	vertical-align: middle;
-	border-color: inherit;
-}
-
-.table tbody tr td {
-	color: #999;
-	padding: 0.8rem 1.2rem;
-	text-align: center;
-}
-
-.table tbody tr td:first-child {
-	text-align: left;
-}
-
-.table tbody tr:nth-child(odd) {
-	background: #222;
-}
-
-.footer {
-	max-width: 70%;
-	margin: 1rem auto;
-	overflow: auto;
-}
-
-.footer,
-.footer a {
-	color: #999;
-	font-size: 0.9rem;
-}
-
-.footer p {
-	margin-bottom: 1.5rem;
-}
-
-.footer .footer-cols {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 2rem;
-}
-
-.footer li {
-	line-height: 1.9;
-}
-
-.footer .lang-select {
-	margin-top: 2rem;
-	color: #999;
-	background-color: #000;
-	background-image: none;
-	border: 1px solid #333;
-	padding: 1rem 1.2rem;
-	border-radius: 5px;
-}
-
-/* Container */
-.container {
-	max-width: 70%;
-	margin: auto;
-	overflow: hidden;
-	padding: 0 2rem;
-}
-
-/* Text Styles */
-.text-xl {
-	font-size: 2rem;
-}
-
-.text-lg {
-	font-size: 1.8rem;
-	margin-bottom: 1rem;
-}
-
-.text-md {
-	margin-bottom: 1.5rem;
-	font-size: 1.2rem;
-}
-
-.text-center {
-	text-align: center;
-}
-
-.text-dark {
-	color: #999;
-}
-
-/* Buttons */
-.btn {
-	display: inline-block;
-	background: var(--primary-color);
-	color: #fff;
-	padding: 0.4rem 1.3rem;
+.input {
 	font-size: 1rem;
-	text-align: center;
-	border: none;
-	cursor: pointer;
-	margin-right: 0.5rem;
-	transition: opacity 0.2s ease-in;
-	outline: none;
-	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
-	border-radius: 2px;
-}
-
-.btn:hover {
-	opacity: 0.8;
-}
-
-.btn-rounded {
-	border-radius: 5px;
-}
-
-.btn-xl {
-	font-size: 2rem;
-	padding: 1.5rem 2.1rem;
+	padding: 1.2rem 1.6rem;
 	text-transform: uppercase;
 }
-
-.btn-lg {
-	font-size: 1rem;
-	padding: 0.8rem 1.3rem;
-	text-transform: uppercase;
-}
-
-.btn-icon {
-	margin-left: 1rem;
-}
-
-@media (max-width: 960px) {
-
-		.showcase {
-		height: 70vh;
-	}
-
-	.hide-sm {
-		display: none;
-	}
-
-	.showcase-top img {
-		top: 30%;
-		left: 5%;
-		transform: translate(0);
-	}
-
-	.showcase-content h1 {
-		font-size: 3.7rem;
-		line-height: 1;
-	}
-
-	.showcase-content p {
-		font-size: 1.5rem;
-	}
-
-	.footer .footer-cols {
-		grid-template-columns: repeat(2, 1fr);
-	}
-
-	.btn-xl {
-		font-size: 1.5rem;
-		padding: 1.4rem 2rem;
-		text-transform: uppercase;
-	}
-
-	.text-xl {
-		font-size: 1.5rem;
-	}
-
-	.text-lg {
-		font-size: 1.3rem;
-		margin-bottom: 1rem;
-	}
-
-	.text-md {
-		margin-bottom: 1rem;
-		font-size: 1.2rem;
-	}
-}
-
-@media (max-width: 700px) {
-	.showcase::after {
-		background: rgba(0, 0, 0, 0.6);
-		box-shadow: inset 80px 80px 150px #000000, inset -80px -80px 150px #000000;
-	}
-
-	.showcase-content h1 {
-		font-size: 2.5rem;
-		line-height: 1;
-	}
-
-	.showcase-content p {
-		font-size: 1rem;
-	}
-
-	#tab-1-content .tab-1-content-inner {
-		grid-template-columns: 1fr;
-		text-align: center;
-	}
-
-	#tab-2-content .tab-2-content-top {
-		display: block;
-		text-align: center;
-	}
-
-	#tab-2-content .tab-2-content-bottom {
-		margin-top: 2rem;
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-gap: 2rem;
-		text-align: center;
-	}
-
-	.btn-xl {
-		font-size: 1rem;
-		padding: 1.2rem 1.6rem;
-		text-transform: uppercase;
-	}
 }
 
 @media(max-height: 600px) {
-  .showcase-content {
-	margin-top: 3rem;
+.showcase-content {
+margin-top: 2rem;
 }
 }
